# PoseEditor

./: .gitignore  PoseEditor.spec  README.md  main.py  meta.json  model_loader.py  pyproject.toml  requirements.txt  requirements_build.txt  voice_input.py
.claude/: settings.json
.github/workflows/: build.yml
src/poseeditor/: __init__.py  app.py  constants.py  main_window.py  models.py  undo.py
src/poseeditor/widgets/: __init__.py  canvas.py  tooltip.py
tests/: test_models_and_undo.py
